--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <header</header>
-        
-    </body>
-</html> -->
-
 
 <!DOCTYPE html>
 <html>
@@ -33,32 +22,37 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div class="heroImg">
-            <img src="image2.jpg" alt="Image 2">
-            <h2>Subheading 2</h2>
-            <p>Suspendisse potenti. Cras sit amet gravida neque.</p>
+    <section id="hero">
+        <div class="hero-container">
+            <div class="hero-text">
+                <p>Hi, my name is Igor. I'm a digital designer based in Toronto who seeks to find the balance between clean and user-friendly design</p>
+                <button>Download Resume</button>
+            </div>
+            <div class="heroImg">
+                <img src="/images/igorpng.png" alt="Image 2">
+            </div>
         </div>
     </section>
-    <section>
-        <!-- <h1>Menu</h1> -->
-
-        <!-- First group of elements -->
+    <!-- <div class="heading">
+        <h1>My Work</h1>
+    </div> -->
+    <section id="content">
+        <div class="heading">
+            <h1>My Work</h1>
+        </div>
         <div class="content-group">
-            <img src="image1.jpg" alt="Image 1">
-            <h2>Subheading 1</h2>
+            <img src="/images/mockup.png" alt="Image 1">
+            <h2>Case Study 1</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
-
-        <!-- Second group of elements -->
         <div class="content-group">
-            <img src="image2.jpg" alt="Image 2">
-            <h2>Subheading 2</h2>
+            <img src="images/mockup2.png" alt="Image 2">
+            <h2>Case Study 2</h2>
             <p>Suspendisse potenti. Cras sit amet gravida neque.</p>
         </div>
     </section>
     <footer>
-        <img src="logo.png" alt="Footer Logo">
+        <img src="images/logo.png" alt="Footer Logo">
         <div class="social-media">
             <button><a href="https://www.facebook.com">Facebook</a></button>
             <button><a href="https://www.twitter.com">Twitter</a></button>
